@@ -163,7 +163,6 @@ class GtkInstallProgressAdapter(InstallProgress):
         reaper = vte.reaper_get()
         reaper.connect("child-exited", self.child_exited)
         # some options for dpkg to make it die less easily
-        apt_pkg.Config.Set("DPkg::Options::","--force-overwrite")
         apt_pkg.Config.Set("DPkg::StopOnError","False")
 
     def startUpdate(self):
