@@ -4,6 +4,9 @@ update-manager (1:0.87.20) hardy; urgency=low
     - fix incorrect _() call (thanks to Timo Jyrinki)
   * DistUpgrade/mirrors.cfg:
     - fix ports.ubuntu.com mirror URI (LP: #215346)
+  * run dpkg with --force-overwrite by default on the server
+    too to make the upgrade more robust. this can be overwriten
+    with the RELEASE_UPGRADE_NO_FORCE_OVERWRITE environment
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Apr 2008 21:37:49 +0200
 
